test/libsolidity/syntaxTests/inlineAssembly/function_call_not_found.sol
contract C {
  function f() public pure {
    assembly {
      k()
    }
  }
}
// ----
// SyntaxError 1184: (46-72): Inline assembly is not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
